Add the Api In the Swagger ui and Add extra validation on Like controller
